@@ -55,8 +55,9 @@ sub child { path(shift->[0], @_) }
 
 
 # essentially just reblessings
-sub parent		{ path( &Path::Tiny::parent   ) }
-sub realpath	{ path( &Path::Tiny::realpath ) }
+sub parent		{ path( &Path::Tiny::parent   )          }
+sub realpath	{ path( &Path::Tiny::realpath )          }
+sub children	{ map { path($_) } &Path::Tiny::children }
 
 # simple correspondences
 *dir		=	\&parent;
