@@ -2,6 +2,9 @@ Revision history for Path-Class-Tiny
 
 {{$NEXT}}
 
+    [Bug Fixes]
+    * `children` is returning the proper class now
+
     [New Features]
     * limited integration with Date::Easy:
       * can send `touch` a datetime object
